Decimal Alignment main (#173)
Fixes #42 Adding blocked to allow closing the other PRs.

Here the to-dos from #127:

- [x]  News
- [x] Additions to the vignette about customization (`rtables`)
https://github.com/insightsengineering/rtables/issues/610
- [x] Fix the bug with `colwidths` failing if specified (Davide)
- [x] Modify the checks (possibly in `rtables`) that throw an error when
used in (e.g.) `in_rows`
https://github.com/insightsengineering/rtables/issues/610 blocked by:
- [x] Allow widths padding when colwidths is inserted
- [x] Expand the function documentation for align so-to make
`decimal_align` reachable from where it is needed. This should be
followed up in rtables.
- [x] Add a test for mix alignments (by @gmbecker)
- [x] Fix the alignment for cases where there are some numbers w/o
decimal space (dot)
- [x] Add the possibility to align also in case of multiple numbers
(dec-left or decimal -> first number, dec-right -> last number) - from
discussion w/ @ayogasekaram & @gmbecker -
- [x] Test the latter a bit more.
- [x] Add safety nets for wrong doings

---------

Signed-off-by: Davide Garolini <dgarolini@gmail.com>
Signed-off-by: Gabe Becker <gabembecker@gmail.com>
Co-authored-by: Gabriel Becker <gabembecker@gmail.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,8 @@ export(all_footers)
 export(all_titles)
 export(basic_matrix_form)
 export(basic_pagdf)
+export(check_aligns)
+export(decimal_align)
 export(default_hsep)
 export(diagnose_pagination)
 export(divider_height)
@@ -41,6 +43,7 @@ export(font_lcpi)
 export(format_value)
 export(is.wholenumber)
 export(is_valid_format)
+export(list_valid_aligns)
 export(list_valid_format_labels)
 export(main_footer)
 export(main_title)
