--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,9 @@ Authors@R: c(
     person("Davide", "Garolini", , "davide.garolini@roche.com", role = "ctb"),
     person("Emily", "de la Rua", , "emily.de_la_rua@contractors.roche.com", role = "ctb"),
     person("Abinaya", "Yogasekaram", , "abinaya.yogasekaram@contractors.roche.com", role = "ctb"),
+    person("Joe", "Zhu", , "joe.zhu@roche.com", role = c("ctb", "cre")),
     person("F. Hoffmann-La Roche AG", role = c("cph", "fnd"))
   )
-Maintainer: Joe Zhu <joe.zhu@roche.com>
 Description: We provide a framework for rendering complex tables to ASCII,
     and a set of formatters for transforming values or sets of values into
     ASCII-ready display strings.
