--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -95,6 +95,7 @@ reference:
     contents:
       - print,ANY-method
       - wrap_string
+      - wrap_txt
       - ifnotlen0
       - table_inset
       - default_hsep
