--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ export(propose_column_widths)
 export(prov_footer)
 export(ref_df_row)
 export(round_fmt)
+export(set_default_hsep)
 export(spans_to_viscell)
 export(spread_integer)
 export(sprintf_format)
