--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,10 +36,10 @@ export(default_hsep)
 export(diagnose_pagination)
 export(divider_height)
 export(do_forced_paginate)
+export(export_as_pdf)
 export(export_as_rtf)
 export(export_as_txt)
 export(fmt_config)
-export(font_lcpi)
 export(format_value)
 export(is.wholenumber)
 export(is_valid_format)
@@ -133,9 +133,24 @@ import(checkmate)
 import(grDevices)
 import(grid)
 import(methods)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(grid,convertHeight)
+importFrom(grid,convertWidth)
+importFrom(grid,get.gpar)
+importFrom(grid,gpar)
+importFrom(grid,grid.draw)
+importFrom(grid,grid.newpage)
+importFrom(grid,grobHeight)
+importFrom(grid,grobWidth)
+importFrom(grid,plotViewport)
+importFrom(grid,pushViewport)
+importFrom(grid,textGrob)
+importFrom(grid,unit)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(stats,na.omit)
+importFrom(tools,file_ext)
 importFrom(utils,capture.output)
 importFrom(utils,head)
 importFrom(utils,localeToCharset)
