--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -48,6 +48,7 @@ reference:
   - title: MatrixPrintForm
     desc: MatrixPrintForm class and constructor
     contents:
+      - MatrixPrintForm
       - MatrixPrintForm-class
   - title: ASCII Rendering of MatrixPrintForm objects
     desc: ASCII rendering-related functions which operate on MatrixPrintForm objects
