Fix of newlines in footers; towards fixing pagination for rlistings (#246)
Fixes the following issues

- [x] #243
- [x] https://github.com/insightsengineering/formatters/issues/232
- [x] https://github.com/insightsengineering/rlistings/issues/183
- [x] True fix for
https://github.com/insightsengineering/rlistings/issues/155
- [x] https://github.com/insightsengineering/scda.test/pull/99

To merge with https://github.com/insightsengineering/rlistings/pull/192
(tests and misc) and
https://github.com/insightsengineering/rtables/pull/813 (tests and
removed titles/footers newline handling)

---------

Signed-off-by: Davide Garolini <dgarolini@gmail.com>
Co-authored-by: 27856297+dependabot-preview[bot]@users.noreply.github.com <27856297+dependabot-preview[bot]@users.noreply.github.com>

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -48,7 +48,7 @@ reference:
   - title: MatrixPrintForm
     desc: MatrixPrintForm class and constructor
     contents:
-      - matrix_print_form
+      - MatrixPrintForm
       - MatrixPrintForm-class
   - title: ASCII Rendering of MatrixPrintForm objects
     desc: ASCII rendering-related functions which operate on MatrixPrintForm objects
