--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,12 +32,13 @@ Suggests:
     knitr (>= 1.42),
     r2rtf (>= 0.3.2),
     stringi (>= 1.6),
-    testthat (>= 3.0.4)
+    testthat (>= 3.0.4),
+    withr (>= 2.0.0)
 VignetteBuilder:
     knitr
 Config/Needs/verdepcheck: mllg/checkmate, rstudio/htmltools,
     tidyverse/dplyr, rstudio/gt, hughjonesd/huxtable, yihui/knitr,
-    Merck/r2rtf, r-lib/testthat
+    Merck/r2rtf, gagolews/stringi, r-lib/testthat, r-lib/withr
 Config/Needs/website: insightsengineering/nesttemplate
 Encoding: UTF-8
 Language: en-US
