--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,12 +9,10 @@ repos:
     -   id: roxygenize
         name: Regenerate package documentation
         additional_dependencies:
-          - dplyr
-          - gt
-          - huxtable
-          - r2rtf
-          - vctrs
+          - methods
           - checkmate
+          - grid
+          - htmltools
     # codemeta must be above use-tidy-description when both are used
     # -   id: codemeta-description-updated
     -   id: use-tidy-description
