feat: reproducible error with mock test matrix_form

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export("var_labels<-")
 export(MatrixPrintForm)
 export(all_footers)
 export(all_titles)
+export(basic_listing_mf)
 export(basic_matrix_form)
 export(basic_pagdf)
 export(check_aligns)
