truetype font support for pagination and propose column widths

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export("mf_aligns<-")
 export("mf_cinfo<-")
 export("mf_colgap<-")
 export("mf_display<-")
+export("mf_fontspec<-")
 export("mf_formats<-")
 export("mf_lgrouping<-")
 export("mf_ncol<-")
@@ -32,6 +33,7 @@ export(basic_listing_mf)
 export(basic_matrix_form)
 export(basic_pagdf)
 export(check_aligns)
+export(close_font_dev)
 export(decimal_align)
 export(default_hsep)
 export(default_page_number)
@@ -42,6 +44,7 @@ export(export_as_pdf)
 export(export_as_rtf)
 export(export_as_txt)
 export(fmt_config)
+export(font_spec)
 export(format_value)
 export(is.wholenumber)
 export(is_valid_format)
@@ -55,6 +58,7 @@ export(mf_aligns)
 export(mf_cinfo)
 export(mf_colgap)
 export(mf_display)
+export(mf_fontspec)
 export(mf_formats)
 export(mf_has_rlabels)
 export(mf_has_topleft)
@@ -69,6 +73,7 @@ export(mf_spans)
 export(mf_strings)
 export(mpf_has_rlabels)
 export(mpf_to_rtf)
+export(nchar_ttype)
 export(nlines)
 export(num_rep_cols)
 export(obj_align)
@@ -76,6 +81,7 @@ export(obj_format)
 export(obj_label)
 export(obj_na_str)
 export(obj_name)
+export(open_font_dev)
 export(padstr)
 export(pag_indices_inner)
 export(pagdfrow)
