clean R CMD check and pkgdown

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export("mf_rfnotes<-")
 export("mf_rinfo<-")
 export("mf_spans<-")
 export("mf_strings<-")
+export("num_rep_cols<-")
 export("obj_align<-")
 export("obj_format<-")
 export("obj_label<-")
@@ -113,6 +114,7 @@ export(wrap_txt)
 exportClasses(MatrixPrintForm)
 exportMethods("main_footer<-")
 exportMethods("main_title<-")
+exportMethods("num_rep_cols<-")
 exportMethods("obj_align<-")
 exportMethods("obj_format<-")
 exportMethods("obj_label<-")
@@ -159,6 +161,7 @@ importFrom(grid,unit)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(stats,na.omit)
+importFrom(stats,quantile)
 importFrom(tools,file_ext)
 importFrom(utils,capture.output)
 importFrom(utils,head)
