adding setter for default page number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(basic_pagdf)
 export(check_aligns)
 export(decimal_align)
 export(default_hsep)
+export(default_page_number)
 export(diagnose_pagination)
 export(divider_height)
 export(do_forced_paginate)
@@ -89,6 +90,7 @@ export(prov_footer)
 export(ref_df_row)
 export(round_fmt)
 export(set_default_hsep)
+export(set_default_page_number)
 export(spans_to_viscell)
 export(spread_integer)
 export(sprintf_format)
