--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ export(round_fmt)
 export(set_default_hsep)
 export(set_default_page_number)
 export(spans_to_viscell)
+export(split_word_ttype)
 export(spread_integer)
 export(sprintf_format)
 export(subtitles)
@@ -110,6 +111,7 @@ export(var_relabel)
 export(vert_pag_indices)
 export(with_label)
 export(wrap_string)
+export(wrap_string_ttype)
 export(wrap_txt)
 exportClasses(MatrixPrintForm)
 exportMethods("main_footer<-")
