--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,7 @@ Suggests:
     huxtable (>= 2.0.0),
     knitr (>= 1.42),
     r2rtf (>= 0.3.2),
+    rmarkdown (>= 2.19),
     stringi (>= 1.6),
     testthat (>= 3.0.4),
     withr (>= 2.0.0)
@@ -39,7 +40,7 @@ VignetteBuilder:
     knitr
 Config/Needs/verdepcheck: mllg/checkmate, rstudio/htmltools,
     tidyverse/dplyr, rstudio/gt, hughjonesd/huxtable, yihui/knitr,
-    Merck/r2rtf, gagolews/stringi, r-lib/testthat, r-lib/withr
+    Merck/r2rtf, rstudio/rmarkdown, gagolews/stringi, r-lib/testthat, r-lib/withr
 Config/Needs/website: insightsengineering/nesttemplate
 Encoding: UTF-8
 Language: en-US
