--- a/.github/workflows/scheduled.yaml
+++ b/.github/workflows/scheduled.yaml
@@ -4,6 +4,9 @@ name: Scheduled 🕰️
 on:
   schedule:
     - cron: '45 3 * * 0'
+  push:
+    branches:
+      - verdepcheck_fixes
   workflow_dispatch:
 
 jobs:
