--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,17 +31,20 @@ Suggests:
     gt (>= 0.7.0),
     huxtable (>= 2.0.0),
     knitr (>= 1.42),
+    lifecycle (>= 0.2.0),
     r2rtf (>= 0.3.2),
     rmarkdown (>= 2.19),
     stringi (>= 1.6),
     testthat (>= 3.0.4),
     withr (>= 2.0.0)
+RdMacros:
+    lifecycle
 VignetteBuilder:
     knitr
 Config/Needs/verdepcheck: mllg/checkmate, rstudio/htmltools,
     tidyverse/dplyr, rstudio/gt, hughjonesd/huxtable, yihui/knitr,
-    Merck/r2rtf, rstudio/rmarkdown, gagolews/stringi, r-lib/testthat,
-    r-lib/withr
+    r-lib/lifecycle, Merck/r2rtf, rstudio/rmarkdown, gagolews/stringi, 
+    r-lib/testthat, r-lib/withr
 Config/Needs/website: insightsengineering/nesttemplate
 Encoding: UTF-8
 Language: en-US
