--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,9 @@ export(fmt_config)
 export(format_value)
 export(is.wholenumber)
 export(is_valid_format)
+export(jjcs_format_xx_fct)
+export(jjcsformat_count_denom_fraction)
+export(jjcsformat_count_fraction)
 export(list_valid_aligns)
 export(list_valid_format_labels)
 export(main_footer)
@@ -88,6 +91,7 @@ export(paginate_to_mpfs)
 export(propose_column_widths)
 export(prov_footer)
 export(ref_df_row)
+export(roundSAS)
 export(round_fmt)
 export(set_default_hsep)
 export(set_default_page_number)
