--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,8 @@ export(format_value)
 export(is.wholenumber)
 export(is_valid_format)
 export(jjcs_format_xx_fct)
+export(jjcsformat_count_denom_fraction)
+export(jjcsformat_count_fraction)
 export(jjcsformat_count_fraction_fct)
 export(list_valid_aligns)
 export(list_valid_format_labels)
@@ -90,7 +92,6 @@ export(paginate_to_mpfs)
 export(propose_column_widths)
 export(prov_footer)
 export(ref_df_row)
-export(roundSAS)
 export(round_fmt)
 export(set_default_hsep)
 export(set_default_page_number)
@@ -156,6 +157,7 @@ importFrom(grid,unit)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(stats,na.omit)
+importFrom(tidytlg,roundSAS)
 importFrom(tools,file_ext)
 importFrom(utils,capture.output)
 importFrom(utils,head)
