--- a/NAMESPACE
+++ b/NAMESPACE
@@ -152,6 +152,7 @@ importFrom(grid,textGrob)
 importFrom(grid,unit)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
+importFrom(lifecycle,deprecated)
 importFrom(stats,na.omit)
 importFrom(tools,file_ext)
 importFrom(utils,capture.output)
