--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,13 +42,15 @@ export(export_as_pdf)
 export(export_as_rtf)
 export(export_as_txt)
 export(fmt_config)
+export(format_r_count_denom_fraction)
+export(format_r_count_fraction)
+export(format_sas_count_denom_fraction)
+export(format_sas_count_fraction)
 export(format_value)
+export(format_xx_r)
+export(format_xx_sas)
 export(is.wholenumber)
 export(is_valid_format)
-export(jjcs_format_xx_fct)
-export(jjcsformat_count_denom_fraction)
-export(jjcsformat_count_fraction)
-export(jjcsformat_count_fraction_fct)
 export(list_valid_aligns)
 export(list_valid_format_labels)
 export(main_footer)
@@ -157,7 +159,6 @@ importFrom(grid,unit)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(stats,na.omit)
-importFrom(tidytlg,roundSAS)
 importFrom(tools,file_ext)
 importFrom(utils,capture.output)
 importFrom(utils,head)
