Move fork changes to internal branch for truetype PR

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export("mf_aligns<-")
 export("mf_cinfo<-")
 export("mf_colgap<-")
 export("mf_display<-")
+export("mf_fontspec<-")
 export("mf_formats<-")
 export("mf_lgrouping<-")
 export("mf_ncol<-")
@@ -15,6 +16,7 @@ export("mf_rfnotes<-")
 export("mf_rinfo<-")
 export("mf_spans<-")
 export("mf_strings<-")
+export("num_rep_cols<-")
 export("obj_align<-")
 export("obj_format<-")
 export("obj_label<-")
@@ -32,6 +34,7 @@ export(basic_listing_mf)
 export(basic_matrix_form)
 export(basic_pagdf)
 export(check_aligns)
+export(close_font_dev)
 export(decimal_align)
 export(default_hsep)
 export(default_page_number)
@@ -42,6 +45,7 @@ export(export_as_pdf)
 export(export_as_rtf)
 export(export_as_txt)
 export(fmt_config)
+export(font_spec)
 export(format_value)
 export(is.wholenumber)
 export(is_valid_format)
@@ -55,6 +59,7 @@ export(mf_aligns)
 export(mf_cinfo)
 export(mf_colgap)
 export(mf_display)
+export(mf_fontspec)
 export(mf_formats)
 export(mf_has_rlabels)
 export(mf_has_topleft)
@@ -69,6 +74,7 @@ export(mf_spans)
 export(mf_strings)
 export(mpf_has_rlabels)
 export(mpf_to_rtf)
+export(nchar_ttype)
 export(nlines)
 export(num_rep_cols)
 export(obj_align)
@@ -76,6 +82,7 @@ export(obj_format)
 export(obj_label)
 export(obj_na_str)
 export(obj_name)
+export(open_font_dev)
 export(padstr)
 export(pag_indices_inner)
 export(pagdfrow)
@@ -92,6 +99,7 @@ export(round_fmt)
 export(set_default_hsep)
 export(set_default_page_number)
 export(spans_to_viscell)
+export(split_word_ttype)
 export(spread_integer)
 export(sprintf_format)
 export(subtitles)
@@ -103,10 +111,12 @@ export(var_relabel)
 export(vert_pag_indices)
 export(with_label)
 export(wrap_string)
+export(wrap_string_ttype)
 export(wrap_txt)
 exportClasses(MatrixPrintForm)
 exportMethods("main_footer<-")
 exportMethods("main_title<-")
+exportMethods("num_rep_cols<-")
 exportMethods("obj_align<-")
 exportMethods("obj_format<-")
 exportMethods("obj_label<-")
@@ -154,6 +164,7 @@ importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(lifecycle,deprecated)
 importFrom(stats,na.omit)
+importFrom(stats,quantile)
 importFrom(tools,file_ext)
 importFrom(utils,capture.output)
 importFrom(utils,head)
