--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -97,6 +97,7 @@ reference:
     contents:
       - print,ANY-method
       - wrap_string
+      - wrap_string_ttype
       - wrap_txt
       - ifnotlen0
       - table_inset
@@ -107,3 +108,9 @@ reference:
       - ref_df_row
       - default_page_number
       - set_default_page_number
+  - title: Font support
+    desc: Functions related to font support for pagination
+    contents:
+      - font_spec
+      - nchar_ttype
+      - open_font_dev
