add tests/fix coverage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(basic_matrix_form)
 export(basic_pagdf)
 export(check_aligns)
 export(close_font_dev)
+export(debug_font_dev)
 export(decimal_align)
 export(default_hsep)
 export(default_page_number)
@@ -105,6 +106,7 @@ export(sprintf_format)
 export(subtitles)
 export(table_inset)
 export(toString)
+export(undebug_font_dev)
 export(var_labels)
 export(var_labels_remove)
 export(var_relabel)
@@ -164,7 +166,6 @@ importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(lifecycle,deprecated)
 importFrom(stats,na.omit)
-importFrom(stats,quantile)
 importFrom(tools,file_ext)
 importFrom(utils,capture.output)
 importFrom(utils,head)
