--- a/NAMESPACE
+++ b/NAMESPACE
@@ -166,6 +166,10 @@ importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(lifecycle,deprecated)
 importFrom(stats,na.omit)
+importFrom(stringi,stri_detect)
+importFrom(stringi,stri_replace)
+importFrom(stringi,stri_sub)
+importFrom(stringi,stri_wrap)
 importFrom(tools,file_ext)
 importFrom(utils,capture.output)
 importFrom(utils,head)
