--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(debug_font_dev)
 export(decimal_align)
 export(default_hsep)
 export(default_page_number)
+export(default_rounding)
 export(diagnose_pagination)
 export(divider_height)
 export(do_forced_paginate)
@@ -99,6 +100,7 @@ export(ref_df_row)
 export(round_fmt)
 export(set_default_hsep)
 export(set_default_page_number)
+export(set_default_rounding)
 export(spans_to_viscell)
 export(split_word_ttype)
 export(spread_integer)
