--- a/.revdeprefs.yaml
+++ b/.revdeprefs.yaml
@@ -5,4 +5,6 @@
 - insightsengineering/tern.mmrm
 - insightsengineering/tern.rbmi
 - insightsengineering/scda.test
-
+- insightsengineering/chevron
+- insightsengineering/rtables.officer
+- insightsengineering/autoslider.core
