--- a/.revdeprefs.yaml
+++ b/.revdeprefs.yaml
@@ -8,4 +8,5 @@
 - insightsengineering/chevron
 - insightsengineering/rtables.officer
 - insightsengineering/autoslider.core
-
+- dmurdoch/tables
+- kaigu1990/mcradds
