Add processx dependency version 3.8.4
Signed-off-by: Joe Zhu <sha.joe.zhu@gmail.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Suggests:
     gt (>= 0.10.0),
     huxtable (>= 2.0.0),
     knitr (>= 1.42),
+    processx (>= 3.8.4),
     r2rtf (>= 0.3.2),
     rmarkdown (>= 2.23),
     testthat (>= 3.0.4),
