--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,17 +29,20 @@ Depends:
 Imports:
     checkmate (>= 2.1.0),
     grid,
-    htmltools (>= 0.5.3),
+    htmltools (>= 0.5.8.1),
     lifecycle (>= 0.2.0),
     stringi (>= 1.7.12)
 Suggests:
+    digest (>= 0.6.37),
     dplyr (>= 1.0.9),
     gt (>= 0.10.0),
     huxtable (>= 2.0.0),
-    knitr (>= 1.42),
+    knitr (>= 1.50),
+    processx (>= 3.8.4),
     r2rtf (>= 0.3.2),
-    rmarkdown (>= 2.23),
-    testthat (>= 3.0.4),
+    rmarkdown (>= 2.28),
+    sass (>= 0.4.9),
+    testthat (>= 3.2.1.1),
     withr (>= 2.0.0)
 VignetteBuilder:
     knitr,
@@ -53,7 +56,7 @@ Encoding: UTF-8
 Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 Collate:
     'data.R'
     'format_value.R'
