address review comments Gabe

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ exportMethods("obj_align<-")
 exportMethods("obj_format<-")
 exportMethods("obj_label<-")
 exportMethods("obj_na_str<-")
+exportMethods("obj_round_type<-")
 exportMethods("page_titles<-")
 exportMethods("prov_footer<-")
 exportMethods("subtitles<-")
