1040 rtables round type (#366)
this PR is linked to rtables issue
https://github.com/insightsengineering/rtables/issues/1040

---------

Signed-off-by: Davide Garolini <dgarolini@gmail.com>
Co-authored-by: github-actions <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Davide Garolini <dgarolini@gmail.com>
Co-authored-by: Gabe Becker <gabembecker@gmail.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export("obj_format<-")
 export("obj_label<-")
 export("obj_na_str<-")
 export("obj_name<-")
+export("obj_round_type<-")
 export("page_titles<-")
 export("prov_footer<-")
 export("subtitles<-")
@@ -83,6 +84,7 @@ export(obj_format)
 export(obj_label)
 export(obj_na_str)
 export(obj_name)
+export(obj_round_type)
 export(open_font_dev)
 export(padstr)
 export(pag_indices_inner)
@@ -107,6 +109,7 @@ export(subtitles)
 export(table_inset)
 export(toString)
 export(undebug_font_dev)
+export(valid_round_type)
 export(var_labels)
 export(var_labels_remove)
 export(var_relabel)
@@ -123,6 +126,7 @@ exportMethods("obj_align<-")
 exportMethods("obj_format<-")
 exportMethods("obj_label<-")
 exportMethods("obj_na_str<-")
+exportMethods("obj_round_type<-")
 exportMethods("page_titles<-")
 exportMethods("prov_footer<-")
 exportMethods("subtitles<-")
@@ -139,6 +143,7 @@ exportMethods(obj_align)
 exportMethods(obj_format)
 exportMethods(obj_label)
 exportMethods(obj_na_str)
+exportMethods(obj_round_type)
 exportMethods(page_titles)
 exportMethods(prov_footer)
 exportMethods(subtitles)
